// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton /> matches snapshot with \`size = lg\` 1`] = `
<div>
  <button
    aria-selected="false"
    class=" css-1f7doby-radioButton-radioButton"
    id="radio-0"
  >
    Test label
  </button>
</div>
`;

exports[`<RadioButton /> matches snapshot with \`size = md\` 1`] = `
<div>
  <button
    aria-selected="false"
    class="my-radio-class css-19fta22-radioButton-radioButton"
    id="my-radio-id"
  >
    Test label
  </button>
</div>
`;
